Cambios en el titulo

--- a/matches/templates/home.html
+++ b/matches/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Inicio - Sports App{% endblock %}
 
 {% block content %}
-<h1>Football Matches</h1>
+<h1>Partidos de Futbol</h1>
 
 <!-- Widget General -->
 <div id="wg-api-football-games"
